--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-color: midnightblue;
+color: whitesmoke;
 
 }
 
@@ -12,4 +12,14 @@ color: midnightblue;
 p{
 font-style: oblique;
 color: orangered;
+
 }
+ 
+body{
+
+background:linear-gradient(midnightblue, orangered)
+
+
+
+}
+
