--- a/style.css
+++ b/style.css
@@ -23,3 +23,17 @@ background:linear-gradient(midnightblue, orangered)
 
 }
 
+.kd20k{
+
+width: 50%;
+border: solid 10px orangered;
+margin-left: 25%;
+}
+
+.kd35{
+
+width: 50%;
+border: solid 10px orangered;
+margin-left: 25%;
+}
+
